# qwc-feature-info-service

./: Dockerfile  README.md  feature_info_service.py  info_templates.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: main.yml
info_modules/sql/: layer_info.py
info_modules/wms/: layer_info.py
schemas/: qwc-feature-info-service.json
src/: feature_info_service.py  info_templates.py  server.py
src/info_modules/sql/: layer_info.py
src/info_modules/wms/: layer_info.py
tests/: api_tests.py  info_template.html
