[project]
name = "qwc-feature-info-service"
version = "v2026.01.18"
description = "QWC FeatureInfo Service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask~=3.1.0",
    "Werkzeug~=3.1.4",
    "Flask-JWT-Extended~=4.7.0",
    "flask-restx~=1.3.0",
    "psycopg2~=2.9.9",
    "requests~=2.32.0",
    "SQLAlchemy~=2.0.29",
    "geomet~=1.1.0",
    "qwc-services-core~=1.5.0"
]

[dependency-groups]
dev = [
    "flask-cors>=5.0.0",
    "python-dotenv>=1.0.1",
]
